fix: portfolio slider overflow, progress bar

--- a/css/style.css
+++ b/css/style.css
@@ -1553,6 +1553,9 @@ a.meanmenu-reveal {
   color: #4566d4;
   margin: 0;
 }
+.sub-title.sub-title-style-two {
+  text-align: left;
+}
 
 .title {
   font-family: "Playfair Display", serif;
